新規利用・利用停止に対応
