# src/swagger.yml
@@ -305,7 +305,7 @@ paths:
         required: true
         description: メールアドレス
     put:
-      summary: 勤怠システムパスワード登録
+      summary: 勤怠システム接続設定
       operationId: setPassword
       responses:
         '200':
@@ -320,7 +320,20 @@ paths:
           description: 登録内容
       tags:
         - user
-      description: 勤怠システムのパスワードを登録します。
+      description: 勤怠システムのユーザー情報を登録します。
+      x-submit-label: 登録する
+    delete:
+      summary: タイムカードボタン利用停止
+      description: タイムカードボタンの利用を停止し、登録したすべての情報を抹消します。
+      operationId: deleteUser
+      responses:
+        '200':
+          description: OK
+          schema:
+            $ref: '#/definitions/Empty'
+      tags:
+        - user
+      x-submit-label: 利用停止する
 definitions:
   Empty:
     type: object
@@ -520,9 +533,6 @@ definitions:
       email:
         type: string
         description: メールアドレス
-      api_key:
-        type: string
-        description: APIキー
       username:
         type: string
         description: 勤怠ユーザー名
